# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ans_standard/notification.gni")
import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "ans_reminder/unittest"

ohos_unittest("ans_reminder_unit_test") {
  module_out_path = module_output_path

  include_dirs = [
    ".",
    "include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "/${services_path}/ans/include",
    "${services_path}/ans/test/unittest/mock/include",
  ]

  sources = [
    "${native_path}/test/unittest/reminder_request_alarm_test.cpp",
    "${native_path}/test/unittest/reminder_request_calendar_test.cpp",
    "${native_path}/test/unittest/reminder_request_test.cpp",
    "${native_path}/test/unittest/reminder_request_timer_test.cpp",
  ]

  configs = [ "//utils/native/base:utils_config" ]

  deps = [
    "${core_path}:ans_core",
    "${frameworks_path}/ans/native:ans_innerkits",
    "${frameworks_path}/wantagent:wantagent_innerkits",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_runtime:app_manager",
    "ability_runtime:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
    "bytrace_standard:bytrace_core",
    "ces_standard:cesfwk_innerkits",
    "distributeddatamgr:distributeddata_inner",
    "dmsfwk_standard:zuri",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  subsystem_name = "notification"
  part_name = "ans_standard"
}

group("unittest") {
  testonly = true
  deps = []

  deps += [ ":ans_reminder_unit_test" ]
}
